@@ -118,6 +118,8 @@ bool Input::_UpdateHandleKeyDown( SDL_Event *event ) {
 			break;
 		default:
 			events.push_front( InputEvent( KEY, KEYDOWN, event->key.keysym.sym ) );
+			// typed events go here because SDL will repeat KEYDOWN events for us at the set SDL repeat rate
+			PushTypeEvent( events, event->key.keysym.sym );
 			keyDown[ event->key.keysym.sym ] = 1;
 			break;
 	}
@@ -136,7 +138,6 @@ bool Input::_UpdateHandleKeyUp( SDL_Event *event ) {
 			break;
 		default:
 			events.push_front( InputEvent( KEY, KEYUP, event->key.keysym.sym ) );
-			events.push_front( InputEvent( KEY, KEYTYPED, event->key.keysym.sym ) );
 			keyDown[ event->key.keysym.sym ] = 0;
 			break;
 	}
@@ -157,3 +158,67 @@ void Input::Handle( list<InputEvent> & events ) {
 		used = 1;
 	}
 }
+
+void Input::PushTypeEvent( list<InputEvent> & events, SDLKey key ) {
+	char *word = SDL_GetKeyName(key);
+	char letter = 0;
+
+	if((key == SDLK_LSHIFT) || (key == SDLK_RSHIFT)) return; // we don't care about modifiers here
+	if(key == SDLK_BACKQUOTE) return;
+
+	if(key >= SDLK_a && key <= SDLK_z) {
+		letter = word[0];
+		if(keyDown[SDLK_LSHIFT] || keyDown[SDLK_RSHIFT]) {
+			letter -= 32;
+		}
+	} else if(key == SDLK_SPACE) {
+		letter = ' ';
+	} else if(key >= SDLK_0 && key <= SDLK_9 && (keyDown[SDLK_LSHIFT] || keyDown[SDLK_RSHIFT])) {
+		switch(key) {
+			case SDLK_0:
+				letter = ')';
+			break;
+			case SDLK_1:
+				letter = '!';
+			break;
+			case SDLK_2:
+				letter = '@';
+			break;
+			case SDLK_3:
+				letter = '#';
+			break;
+			case SDLK_4:
+				letter = '$';
+			break;
+			case SDLK_5:
+				letter = '%';
+			break;
+			case SDLK_6:
+				letter = '^';
+			break;
+			case SDLK_7:
+				letter = '&';
+			break;
+			case SDLK_8:
+				letter = '*';
+			break;
+			case SDLK_9:
+				letter = '(';
+			break;
+			default: break; // will never happen, here to avoid compiler warnings
+		}
+	} else if((key == SDLK_QUOTE) && (keyDown[SDLK_LSHIFT] || keyDown[SDLK_RSHIFT])) {
+		letter = '"';
+	} else if(key == SDLK_RETURN) {
+		letter = '\n';
+	} else if((key == SDLK_SEMICOLON) && (keyDown[SDLK_LSHIFT] || keyDown[SDLK_RSHIFT])) {
+		letter = ':';
+	} else if(key == SDLK_BACKSPACE) {
+		letter = '\b';
+	} else {
+		letter = word[0];
+	}
+
+	events.push_front( InputEvent( KEY, KEYTYPED, letter ) );
+}
+
