@@ -1,3 +1,7 @@
+Sunday, February 22, 2009
+	Chris Thielen:
+		* More console UI work
+
 Saturday, February 21, 2009
 	Chris Thielen:
 		* Fixed an issue with fonts not drawing correctly under Mac OS X
